# focal_loss_pytorch

./: README.md  setup.cfg
docs/: conf.py
docs/source/: conf.py  index.rst
focal_loss_pytorch/: __init__.py  focal_loss.py
tests/: test_focal_loss.py
