[metadata]
name = focal_loss_pytorch
version = 0.0.3
author = Alex Meredith
author_email = alexm0802@gmail.com
description = A simple PyTorch implementation of focal loss.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexmeredith8299/focal_loss_pytorch
project_urls =
    Bug Tracker = https://github.com/alexmeredith8299/focal_loss_pytorch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = focal_loss_pytorch
packages = find:
python_requires = >=3.6
install_requires =
	torch
	numpy

[options.packages.find]
where = focal_loss_pytorch

[options.extras_require]
test =
	pytest
